[package]
name = "pcb-rs-macros"
version = "0.1.0"
edition = "2021"
authors = ["Yashodhan Joshi"]
description = "Prco-macros for pcb-rs crate"
license = "MIT OR Apache-2.0"
readme = "../../Readme.md"
homepage= "https://github.com/YJDoc2/pcb-rs"
repository = "https://github.com/YJDoc2/pcb-rs"
documentation = "https://github.com/YJDoc2/pcb-rs#readme"
keywords = ["pcb","hardware","proc-macro","simulation","electronics"]
categories = ["simulation"]

[lib]
name = "pcb_rs_macros"
proc-macro = true

[dependencies]
syn = {version = "1.0.82", features=["extra-traits"] }
quote = "1.0.10"
proc-macro2 = "1.0.33"
pcb-rs-traits = {path="../pcb-rs-traits",version = "0.1.0"}