[package]
name = "pcb-rs-traits"
version = "0.1.0"
edition = "2021"
authors = ["Yashodhan Joshi"]
description = "Traits and common structs for pcb-rs"
license = "MIT OR Apache-2.0"
readme = "../../Readme.md"
homepage= "https://github.com/YJDoc2/pcb-rs"
repository = "https://github.com/YJDoc2/pcb-rs"
documentation = "https://github.com/YJDoc2/pcb-rs#readme"
keywords = ["pcb","hardware","proc-macro","simulation","electronics"]
categories = ["simulation"]

[lib]
name = "pcb_rs_traits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"